--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header class="header-page">
+    <!-- <header class="header-page">
       <div class="container header-container">
         <nav class="nav-header">
           <a class="header-logo" href="./index.html"
@@ -55,17 +55,17 @@
         </ul>
       </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="banner">
+      <!-- <section class="banner">
         <div class="container">
             <h1 class="banner-h">Effective Solutions for Your Business</h1>  
           <button class="banner-button" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
-      <section class="capabilities">
+       <section class="capabilities"> 
         <div class="container">
           <h2 class="visually-hidden">our capabilities</h2>
           <ul class="capabilities-list">
@@ -265,7 +265,7 @@
         </div>
       </section>
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="name-section">Our Portfolio</h2>
             <ul class="portfolio-list">             
@@ -361,10 +361,10 @@
                 </li>
             </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
-    <footer class="footer-page">
+    <!-- <footer class="footer-page">
       <div class="container footer-container">
         <div class="footer-head">
           <a class="footer-logo" href="./index.html"
@@ -410,9 +410,9 @@
   </form>
 </div>
       </div>
-    </footer>
+    </footer> -->
 
-    <div class="backdrop is-open">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-cross">
           <svg class="modal-icon-cross" width="8" height="8">
@@ -491,6 +491,6 @@
           </form>
         
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
