--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <!-- <header class="header-page">
+     <header class="header-page">
       <div class="container header-container">
         <nav class="nav-header">
           <a class="header-logo" href="./index.html"
@@ -54,8 +54,11 @@
           </li>
         </ul>
       </address>
+      <button class="burger-btn" type="button"><svg class="burger-icon" width="24" height="24">
+        <use href="./images/icons.svg#icon-burger"></use>
+      </svg></button>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- <section class="banner">
