--- a/index.html
+++ b/index.html
@@ -58,6 +58,64 @@
         <use href="./images/icons.svg#icon-burger"></use>
       </svg></button>
       </div>
+
+    <div class="mobile-menu is-open">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-cross" type="button"></button>
+        <div>
+          <nav class="mobile-nav">
+            <ul class="mobile-list">
+            <li class="mobile-item">
+              <a class="mobile-link" href="./index.html">Studio</a>
+            </li>
+            <li class="mobile-item">
+              <a class="mobile-link" href="">Portfolio</a>
+            </li>
+            <li class="mobile-item">
+              <a class="mobile-link" href="">Contacts</a>
+            </li>
+          </ul>
+          </nav>
+        </div>
+        <div>
+          <address class="mobile-adress">
+           <ul class="mobile-adress-list">
+             <li class="mobile-address-item">
+              <a class="mobile-adress-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a>
+                       </li>
+             <li class="mobile-address-item">
+              <a class="mobile-adress-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a>
+                       </li>
+           </ul>
+          </address>
+          <ul class="social-links-mobile">
+                    <li class="mobile-list"><a href="https://www.instagram.com/" target="_blank" class="link-mobile">
+                      <svg class="icon-mobile" width="24" height="24">
+                      <use href="./images/icons.svg#icon-insta"></use>
+                    </svg>
+                  </a>
+                    </li>
+                    <li class="mobile-list"><a href="http://www.twitter.com/" target="_blank" class="link-mobile">
+                      <svg class="icon-mobile" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twiter"></use>
+                    </svg></a></li>
+                    <li class="mobile-list"><a href="http://www.facebook.com/" target="_blank" class="link-mobile">
+                      <svg class="icon-mobile" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebok"></use>
+                    </svg></a></li>
+                    <li class="mobile-list"><a href="http://www.linkedin.com/" target="_blank" class="link-mobile">
+                      <svg class="icon-mobile" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg></a></li>
+                  </ul>
+
+        </div>
+        
+
+      </div>
+    </div>
     </header>
 
     <main>
