--- a/index.html
+++ b/index.html
@@ -185,12 +185,13 @@
       </section>
 
       <section class="name">
-        <div class="container">
+        <div class="container container-adapt">
           <h2 class="name-section">Our Team</h2>
           <ul class="name-list">
             <li class="foto-fon">
               <img
-                src="./images/img-1.jpg"
+                srcset="./images/team/team-1-min.jpg 1x, ./images/team/team-1@2x-min.jpg 2x"
+              src="./images/team/team-1-min.jpg"
                 alt="Mark Guerrero Product Designer"
                 width="264"
                 height="260"
@@ -224,7 +225,8 @@
             </li>
             <li class="foto-fon">
               <img
-                src="./images/img-2.jpg"
+               srcset="./images/team/team-2-min.jpg 1x, ./images/team/team-2@2x-min.jpg 2x" 
+              src="./images/team/team-2-min.jpg"
                 alt="Tom Ford Frontend Developer"
                 width="264"
                 height="260"
@@ -258,7 +260,8 @@
             </li>
             <li class="foto-fon">
               <img
-                src="./images/img-3.jpg"
+                srcset="./images/team/team-3-min.jpg 1x, ./images/team/team-3@2x-min.jpg 2x"
+              src="./images/team/team-3-min.jpg"
                 alt="Camila Garcia Marketing"
                 width="264"
                 height="260"
@@ -292,7 +295,8 @@
             </li>
             <li class="foto-fon">
               <img
-                src="./images/img-4.jpg"
+               srcset="./images/team/team-4-min.jpg 1x, ./images/team/team-4@2x-min.jpg 2x" 
+              src="./images/team/team-4-min.jpg"
                 alt="Daniel Wilson UI Designer"
                 width="264"
                 height="260"
@@ -475,7 +479,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-cross">
           <svg class="modal-icon-cross" width="8" height="8">
@@ -539,15 +543,19 @@
               <input class="modal-check visually-hidden" type="checkbox" value="true" name="user-privacy" id="user-privacy" />
               <label for="user-privacy"
                 class="check-text">
-                <span class="check-element"
-                  ><svg
+                <span class="check-element">
+                  <svg
                     class="check-icon"
                     width="10"
                     height="8"
                   >
-                    <use href="./images/icons.svg#icon-vector"></use></svg></span>
-                    I accept the terms and conditions of the
-                <a class="check-link" href="">Privacy Policy</a>
+                    <use href="./images/icons.svg#icon-vector"></use></svg>
+                </span>
+                  
+                      <span class="check-element-link">
+                        I accept the terms and conditions of the
+                                            <a class="check-link" href="">Privacy Policy</a>
+                      </span>
               </label>
             </div>
             <button class="modal-button" type="submit">Send</button>
